--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                         <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Wedding</a>
+                        <a class="nav-link" href="./services.html">Wedding</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pre Wedding</a>
+                        <a class="nav-link" href="./services.html">Pre Wedding</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./services.html">More</a>
@@ -115,7 +115,7 @@
         </button>
     </div>
 
-    <!-- Floating WhatsApp -->
+    <!--  WhatsApp -->
     <a href="https://wa.me/918098510550?text=Hi%2C%20I%20want%20to%20pre-book" class="whatsapp_float" target="_blank"
         rel="noopener noreferrer" aria-label="Chat on WhatsApp" title="Chat on WhatsApp">
         <i class="fa-brands fa-whatsapp" aria-hidden="true"></i>
@@ -159,7 +159,7 @@
             <h2>Our Services</h2>
             <div class="row row-cols-1 row-cols-sm-3 g-5">
                 <div class="col">
-                    <a href="">
+                    <a href="./services.html#t-wed">
                         <div class="card" id="service-card">
                             <img src="./images/Wedding .jpeg" class="card-img-top" alt="Wedding Card">
                             <div class="card-body">
@@ -169,7 +169,7 @@
             </div>
         </div>
         <div class="col">
-            <a href="">
+            <a href="./services.html#p-wed">
                 <div class="card" id="service-card">
                     <img src="./images/pre.jpg" class="card-img-top" alt="Pre Wedding Card">
                     <div class="card-body">
@@ -179,7 +179,7 @@
         </div>
         </div>
         <div class="col">
-            <a href="">
+            <a href="./services.html#puberty">
                 <div class="card" id="service-card">
                     <img src="./images/puberty ceremony .jpg" class="card-img-top" alt="Puberty Ceremony Card">
                     <div class="card-body">
@@ -189,7 +189,7 @@
         </div>
         </div>
         <div class="col">
-            <a href="">
+            <a href="./services.html#b-day">
                 <div class="card" id="service-card">
                     <img src="./images/Birthday.jpg" class="card-img-top" alt="Birthday Events Card">
                     <div class="card-body">
@@ -200,7 +200,7 @@
         </div>
         </div>
         <div class="col">
-            <a href="">
+            <a href="./services.html#k-vizha">
                 <div class="card" id="service-card">
                     <img src="./images/kathani.jpeg" class="card-img-top" alt="Kathani Events Card">
                     <div class="card-body">
@@ -291,6 +291,8 @@
                 <div class="gallery-item"><img src="./images/Ear Piercing (2).jpeg" alt="Image 11"></div>
                 <div class="gallery-item"><img src="./images/wedding candid (2).jpeg" alt="Image 12"></div>
             </div>
+            <p style="text-align: center; font-size: 1.2rem; color: rgba(101, 101, 101, 0.693); margin-top: 20px;">
+                (click image)</p>
         </section>
         <div class="image-viewer" id="imageViewer">
             <span class="close-btn" id="closeViewer">&times;</span>
@@ -353,8 +355,7 @@
                         Tamil Nadu 641652</p>
                 </a>
                 <div style="margin-top: 30px;">
-                    <a href="#top" id="top">Back to top <i class="fa-solid fa-circle-up"
-                            aria-hidden="true"></i></a>
+                    <a href="#" id="top">Back to top <i class="fa-solid fa-circle-up" aria-hidden="true"></i></a>
                 </div>
             </div>
 
