--- a/services.html
+++ b/services.html
@@ -16,6 +16,11 @@
         * section {
             margin: 0 80px;
         }
+
+        .navbar {
+            background: linear-gradient(to right, #ad8767, rgba(209, 185, 149, 0.899), #ad8767);
+
+        }
     </style>
 </head>
 
@@ -40,10 +45,10 @@
                         <a class="nav-link" href="./index.html#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Wedding</a>
+                        <a class="nav-link" href="./services.html">Wedding</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pre Wedding</a>
+                        <a class="nav-link" href="./services.html">Pre Wedding</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./services.html">More</a>
@@ -61,7 +66,7 @@
     <section id="marriage">
         <h2>Marriage Packages</h2>
         <div class="row row-cols-1 row-cols-md-2 g-3 ms-auto">
-            <div class="col">
+            <div class="col" id="t-wed">
                 <div class="card mb-4" style="max-width: 480px;">
                     <div class="row g-0">
                         <div class="col-md-4">
@@ -75,13 +80,15 @@
                                     including rituals, customs, and family moments. Our photographers will capture
                                     the essence of your special day.
                                 </p>
-
+                                <hr
+                                    style=" display: flex; border: 1px solid black; width: 100%; align-items: center; justify-self: center ; ">
+                                <p>This Package Starts with <span class="amount">₹100,000</span></p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col" id="t-p-wed">
                 <div class="card mb-3" style="max-width: 480px;">
                     <div class="row g-0">
                         <div class="col-md-4">
@@ -95,13 +102,15 @@
                                     This package includes coverage of the traditional pre-wedding events,
                                     including engagement ceremonies, candid moments, posed Photos and family gatherings.
                                 </p>
-
+                                <hr
+                                    style=" display: flex; border: 1px solid black; width: 100%; align-items: center; justify-self: center ; ">
+                                <p>This Package Starts with <span class="amount">₹20,000</span></p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col" id="p-wed">
                 <div class="card mb-3" style="max-width: 480px;">
                     <div class="row g-0">
                         <div class="col-md-4">
@@ -115,7 +124,9 @@
                                     capturing romantic moments, scenic locations, and creative poses.
                                     Our photographers will create a memorable experience for the couple.
                                 </p>
-
+                                <hr
+                                    style=" display: flex; border: 1px solid black; width: 100%; align-items: center; justify-self: center ; ">
+                                <p>This Package Starts with <span class="amount">₹50,000</span></p>
                             </div>
                         </div>
                     </div>
@@ -123,7 +134,7 @@
             </div>
 
 
-            <div class="col">
+            <div class="col" id="b-day">
                 <div class="card mb-3" style="max-width: 480px;">
                     <div class="row g-0">
                         <div class="col-md-4">
@@ -137,13 +148,15 @@
                                     capturing joyful moments, cake cutting, and candid shots of guests.
                                     Our photographers will ensure that every special moment is documented.
                                 </p>
-
+                                <hr
+                                    style=" display: flex; border: 1px solid black; width: 100%; align-items: center; justify-self: center ; ">
+                                <p>This Package Starts with <span class="amount">₹10,000</span></p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col" id="puberty">
                 <div class="card mb-3" style="max-width: 480px;">
                     <div class="row g-0">
                         <div class="col-md-4">
@@ -158,13 +171,15 @@
                                     capturing traditional rituals, family moments, and candid shots.
                                     Our photographers will document this important milestone with care.
                                 </p>
-
+                                <hr
+                                    style=" display: flex; border: 1px solid black; width: 100%; align-items: center; justify-self: center ; ">
+                                <p>This Package Starts with <span class="amount">₹25,000</span></p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col" id="k-vizha">
                 <div class="card mb-3" style="max-width: 480px;">
                     <div class="row g-0">
                         <div class="col-md-4">
@@ -179,7 +194,9 @@
                                     capturing traditional rituals, family moments, and candid shots.
                                     Our photographers will document this important event with care.
                                 </p>
-
+                                <hr
+                                    style=" display: flex; border: 1px solid black; width: 100%; align-items: center; justify-self: center ; ">
+                                <p>This Package Starts with <span class="amount">₹30,000</span></p>
                             </div>
                         </div>
                     </div>
@@ -189,8 +206,62 @@
         </div>
         </div>
     </section>
+
+    <br><br>
+    <hr style=" display: flex; border: 1px solid black; width: 85%; align-items: center; justify-self: center ; ">
+
+
+    <!-- Booking Form  -->
+    <h2 class="form" style="margin-left:100px;">Contact Us</h2>
+    <section class="forms">
+        <form class="row g-4 needs-validation">
+            <div class="form-floating md-2">
+                <input type="text" class="form-control" id="name" id="floatingInput" placeholder="Your Name">
+                <label for="floatingInput" class="form-label">Name</label>
+            </div>
+
+            <div class="form-floating mb-3">
+                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <label for="floatingInput">Email address</label>
+            </div>
+            <div class="col-md-4">
+                <label for="inputCity" class="form-label">City</label>
+                <input type="text" class="form-control" id="inputCity">
+            </div>
+            <div class="col-md-4">
+                <label for="inputState" class="form-label">Package</label>
+                <select id="inputState" class="form-select">
+                    <option selected>Marriage</option>
+                    <option>Marriage + Pre Wedding</option>
+                    <option>Pre Wedding</option>
+                    <option>Birthday Events</option>
+                    <option>Puberty ceremony</option>
+                    <option>Others</option>
+                </select>
+                <div class="col-4 ">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="gridCheck">
+                        <label class="form-check-label" for="gridCheck">
+                            Check me out
+                        </label>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <button type="submit" class="btn btn-primary">Sumbit</button>
+                </div>
+        </form>
+    </section>
+
     <br><br><br>
 
+
+
+    <!--  WhatsApp -->
+    <a href="https://wa.me/918098510550?text=Hi%2C%20I%20want%20to%20pre-book" class="whatsapp_float" target="_blank"
+        rel="noopener noreferrer" aria-label="Chat on WhatsApp" title="Chat on WhatsApp">
+        <i class="fa-brands fa-whatsapp" aria-hidden="true"></i>
+
+    </a>
     <!-- Footer section -->
     <footer class="footer" id="footer">
         <div class="footer-container">
@@ -235,6 +306,7 @@
 
 
 
+
             <div class="footer-row3 f-rows">
                 <h4>Address</h4>
                 <a href="">
@@ -243,7 +315,7 @@
                         Tamil Nadu 641652</p>
                 </a>
                 <div style="margin-top: 30px;" class="h4">
-                    <a href="#top" id="top">Back to top <i class="fa-solid fa-circle-up" aria-hidden="true"></i></a>
+                    <a href="#" id="top">Back to top <i class="fa-solid fa-circle-up" aria-hidden="true"></i></a>
                 </div>
             </div>
 
